# ps_os_2020

./: .gitignore  CMakeLists.txt  README.md
example_makefile/: Makefile
exercise01/: my_backup.sh  task2.sh
exercise02/: Makefile  task1.c  task2.c  task3.c
exercise03/: solution.md
exercise04/: Makefile
exercise04/task1/: server_config.h  task1_client.c  task1_server.c
exercise04/task2/: task2.c
exercise05/: Makefile  task3.md
exercise05/task1/: task1_b.c
exercise05/task2/: common.h  task2_a.c  task2_b.c
exercise06/: Makefile  README.md
exercise06/task1/: task1.c
exercise06/task2/: task2.c
exercise06/task3/: philosophers.c  solution_explanation.md
exercise07/: Makefile  README.md
exercise07/task1/: result_interpretation.md  task1.c
exercise07/task2/: result_interpretation.md  task2.c
exercise07/task3/: task3_atomic.c  task3_mutex.c
exercise08/: Makefile  README.md  main.c  scheduling_sim.c  scheduling_sim.h  scheduling_utility.c  scheduling_utility.h
exercise09/: Makefile  README.md
exercise09/common/: allocator.h  membench.c
exercise09/task1/: system_allocator.c
exercise09/task2_3/: task2_3.c
exercise10/: Makefile  README.md
exercise10/task1/: allocator.h  membench.c
exercise10/task2/: free_list_allocator.h  task2.c
exercise10/task3/: README.md
exercise11/: Makefile  README.md  trains.c  trains.h
self_assessment_test/: bstree.c  task2.md
